--- a/fairplay/admin_old/templates/admin/index.html
+++ b/fairplay/admin_old/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'admin/base.html' %}
 
-{% from 'admin/list.html' import render_list %}
-
 {% block main %}
-
+<div class="container">
+  
+</div>
 {% endblock %}
