--- a/fairplay/templates/base.html
+++ b/fairplay/templates/base.html
@@ -19,7 +19,7 @@
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="{{ self.title() }}">
-  <meta property="og:site_name" content="fairplay">
+  <meta property="og:site_name" content="fair.play">
   <meta property="og:url" content="{{ request.base_url }}">
   <meta property="og:image" content="{{ url_for('static', filename='img/og-image.png') }}">
   <meta property="og:description" content="Enhance and refine your products, images and marketing with Generative AI.">
@@ -27,7 +27,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="{{ self.title() }}">
   <meta name="twitter:image" content="{{ url_for('static', filename='img/twitter-image.png') }}">
-  <meta name="twitter:site" content="@fairplay">
+  <meta name="twitter:site" content="@fair.play">
   <meta name="twitter:description" content="Enhance and refine your products, images and marketing with Generative AI.">
   {% endblock %}
 
